--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "DBIdbg"
+name = "dbi_dbg"
 version = "0.1.0"
 authors = ["Nick Gregory <computerfreak97@gmail.com>"]
 edition = "2018"
